src/assets/_actionbar.scss
.gds-action-bar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-left: 20px;
  padding-right: 20px;
  height: 50px;

  &:not(.primary) {
    position: sticky;
    &:before {
      border-bottom: 1px solid #e4e4e4;
      bottom: 0;
      content: '';
      height: 1px;
      left: 20px;
      position: absolute;
      right: 20px;
    }
  }

  &.primary {
    position: sticky;
    box-shadow: 0 2px 10px 0 rgb(51 51 51 / 20%);
  }

  .left-side {
    display: flex;
    flex-direction: row;
    overflow: hidden;

    .back-icon {
      color: $charcoal;
      margin: auto 5px auto 0px;
    }

    .title {
      display: inline-flex;
      overflow: hidden;

      .align-edit {
        border: 1px solid transparent;
        margin-left: 2px;
        margin-right: 2px;
      }

      .clickable {
        cursor: pointer;
      }

      .title-edit-hidden {
        display: inline-flex;
        position: absolute;
        margin: auto 2px;
        padding-right: 4px;
        text-transform: uppercase;
        text-overflow: ellipsis;
        font-size: 22px;
        white-space: nowrap;
        overflow: hidden;
        outline: none;
        color: transparent;
        border: 1px solid transparent;
        z-index: -1;
        border-radius: 4px;
      }

      .title-edit {
        display: inline-flex;
        margin: auto 2px;
        text-transform: uppercase;
        text-overflow: ellipsis;
        font-size: 22px;
        white-space: nowrap;
        overflow: hidden;
        outline: none;
        border: 1px solid transparent;
        border-radius: 4px;

        &:not(:read-only):hover {
          border: 1px solid $chalk;
        }

        &:not(:read-only):focus {
          border: 1px solid $primary;
        }
      }
    }

    .badges {
      display: flex;
      color: $charcoal;
      padding: auto 5px;
      & > * {
        margin: auto 5px;
      }
    }
  }

  .right-side {
    display: flex;
    flex-direction: row;
    justify-content: end;
    -webkit-justify-content: flex-end;

    .actions {
      display: flex;
      & > *:first-child {
        margin: auto 5px auto 0px;
      }
      & > * {
        margin: auto 5px;
      }
      & > *:last-child {
        margin: auto 10px auto 5px;
      }
    }

    .separator {
      display: flex;
      margin: auto 5px;
    }

    .basic-actions {
      display: flex;
      & > * {
        margin: auto 5px;
      }
      & > *:last-child {
        margin: auto 0px auto 3px;
      }
    }
  }
}

